<resources>
    <string name="app_name">UniNavigator</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="profile_image">Profile Image</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here!</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here!</string>
    <string name="lougout">Lougout</string>
    <string name="universitati">Universitati</string>
    <string name="nume_facultate">Nume facultate</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Telefon</string>
    <string name="website">Website</string>
    <string name="nume">Nume</string>
    <string name="facultati">Facultati</string>
    <string name="specializari">Specializari:</string>
    <string name="ultima_medie_buget">Ultima medie buget:</string>
    <string name="ultima_medie_taxa">Ultima medie taxa:</string>
    <string name="nota">nota</string>
    <string name="nume_specializare">Nume specializare:</string>
    <string name="valoare">valoare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="localizare_facultate">Localizare facultate:</string>
    <string name="prenume">Prenume</string>
    <string name="descriere">Descriere</string>
    <string name="salveaza">Salveaza</string>
    <string name="home">Home</string>
    <string name="setari">Setari</string>
    <string name="despre">Despre</string>
    <string name="acasa">Acasa</string>
    <string name="nume_aplicatie">UniNavigator</string>
    <string name="versiune_aplicatie">Versiune 1.00</string>
    <string name="descriere_aplicatie">     Această aplicație ajută studenții să găsească informații despre diferite universități și facultățile acestora. Permite utilizatorilor să vizualizeze detalii despre fiecare universitate, facultate și specializările disponibile.</string>
    <string name="creator_aplicatie">Aplicatie creata de Tudor Gavril. Gasiti-ma pe GitHub</string>
    <string name="timp_ramas_pana_la_prima_proba">Timp rămas până la prima probă scrisă:</string>
    <string name="bun_venit">Bun venit,</string>
    <string name="adauga_la_favorite">Adauga la favorite</string>
    <string name="specializarile_tale_favorite">Specializarile tale favorite:</string>
    <string name="informatii">Informatii:</string>
    <string name="nu_ai_un_cont_apasa_aici">Nu ai un cont? Apasa aici!</string>
    <string name="ai_deja_un_cont_apasa_aici">Ai deja un cont? Apasa aici!</string>
    <string name="adaug_review">Adaugă Review</string>
    <string name="materiile_studiate">Materiile studiate</string>
    <string name="cadre_didactice">Cadre didactice</string>
    <string name="lasa_un_review_scris_optional">Lasă un review scris(opțional)</string>
    <string name="dotari_facultate">Dotari facultate</string>
    <string name="trimite">Trimite</string>
    <string name="adauga_review">Adauga review</string>
    <string name="dotari">Dotari</string>
    <string name="anonim">Anonim</string>
    <string name="niciun_comentariu">Niciun comentariu.</string>
    <string name="review_uri">Review-uri</string>
    <string name="caut_specializ_ri">Caută specializări</string>
    <string name="sterge_review_ul">Șterge</string>
    <string name="emaildp">Email:</string>
    <string name="telefondp">Telefon:</string>
    <string name="websitedp">Website:</string>
    <string name="facultatidp">Facultati:</string>
    <string name="materii">Materii</string>
    <string name="chat">Chat</string>
    <string name="scrie_un_mesaj">Scrie un mesaj</string>
    <string name="message_text">Message text</string>
    <string name="timestamp">Timestamp</string>
    <string name="username">Username</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="nume_prenume">Nume prenume</string>
    <string name="statistici">Statistici</string>
    <string name="procentajul">Procentajul celor mai populare 10 specializari</string>
    <string name="compara_media">Compară-ți media la Bacalaureat cu ceilalți!</string>
</resources>