<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_universitati"
            android:icon="@drawable/ic_universitati"
            android:title="@string/universitati"
            />
        <item
            android:id="@+id/nav_setari"
            android:icon="@drawable/ic_settings"
            android:title="@string/setari"
            />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat"
            />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"
                />
            <item
                android:id="@+id/nav_statistici"
                android:icon="@drawable/ic_statistici"
                android:title="@string/statistici"
                />
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                />
        </menu>
    </item>
</menu>