<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniversitateSelectataActivity"
    android:background="#EDF4F3">

    <ImageView
        android:id="@+id/univSelectata_iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_ase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/univSelectata_tv_nume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nume"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/albastru_mai_inchis"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/univSelectata_tv_adresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adresa"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_nume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/univSelectata_tv_email_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emaildp"
        android:fontFamily="@font/sanss"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_adresa"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/univSelectata_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/sanss"
        android:textStyle="bold"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/albastru_mai_inchis"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_adresa"
        app:layout_constraintStart_toEndOf="@id/univSelectata_tv_email_stat"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        />

    <TextView
        android:id="@+id/univSelectata_tv_telefon_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefondp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/blue"
        android:fontFamily="@font/sanss"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/univSelectata_tv_telefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefon"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/albastru_mai_inchis"
        android:fontFamily="@font/sanss"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_email"
        app:layout_constraintStart_toEndOf="@id/univSelectata_tv_telefon_stat"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        />

    <TextView
        android:id="@+id/univSelectata_tv_website_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/websitedp"
        android:textColor="@color/blue"
        android:fontFamily="@font/sanss"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_telefon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/univSelectata_tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/albastru_mai_inchis"
        android:fontFamily="@font/sanss"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_telefon"
        app:layout_constraintStart_toEndOf="@id/univSelectata_tv_website_stat"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        />

    <TextView
        android:id="@+id/univSelectata_tv_facultati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facultatidp"
        android:textColor="@color/albastru_mai_inchis"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_website"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />

    <ListView
        android:id="@+id/univSelectata_lv_facultati"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="vertical"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/univSelectata_tv_facultati" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/univSelectata_navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemBackground="@color/culoare_navbar"
        app:itemTextColor="@color/menu_icon_color"
        app:itemIconTint="@color/menu_icon_color"
        app:menu="@menu/menu_navigation"/>


</androidx.constraintlayout.widget.ConstraintLayout>