<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF4F3"
    tools:context=".SpecializareSelectataActivity">

    <ScrollView
        android:id="@+id/specSelectata_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_navBar"
        android:fillViewport="true"
        android:background="#EDF4F3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/specSelectata_tv_nume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nume_specializare"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/albastru_mai_inchis"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/specSelectata_tv_ultimaMedieBuget"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultima_medie_buget"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/specSelectata_tv_ultimaMedieBuget_numar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valoare"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp"
                    android:textColor="@color/verde_spre_albastru"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/specSelectata_tv_ultimaMedieTaxa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultima_medie_taxa"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/specSelectata_tv_ultimaMedieTaxa_numar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valoare"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp"
                    android:textColor="@color/verde_spre_albastru"/>
            </LinearLayout>

            <TextView
                android:id="@+id/specSelectata_tv_localizare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localizare_facultate"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/albastru_mai_inchis"
                android:layout_marginTop="32dp" />

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <Button
                    android:id="@+id/specSelectata_btn_adaugaReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="34dp"
                    android:backgroundTint="@color/blue"
                    android:textColor="#FFFFFF"
                    android:text="@string/adauga_review" />

                <Button
                    android:id="@+id/specSelectata_btn_adaugaLaFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/blue"
                    android:layout_margin="8dp"
                    android:text="@string/adauga_la_favorite" />
            </LinearLayout>

            <TextView
                android:id="@+id/specSelectata_tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_uri"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/albastru_mai_inchis"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp" />

            <ListView
                android:id="@+id/specSelectata_lv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/specSelectata_navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemBackground="@color/culoare_navbar"
        app:itemTextColor="@color/menu_icon_color"
        app:itemIconTint="@color/menu_icon_color"
        app:menu="@menu/menu_navigation" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
